--- a/projects/RPi/linux/linux.arm.conf
+++ b/projects/RPi/linux/linux.arm.conf
@@ -937,7 +937,7 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=m
 CONFIG_REGMAP_SPI=m
-CONFIG_REGMAP_MMIO=y
+CONFIG_REGMAP_MMIO=m
 CONFIG_REGMAP_IRQ=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
@@ -1578,7 +1578,6 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 CONFIG_HW_RANDOM_BCM2835=y
-CONFIG_HW_RANDOM_BCM2708=y
 # CONFIG_R3964 is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
@@ -2363,7 +2362,6 @@ CONFIG_MEDIA_COMMON_OPTIONS=y
 # CONFIG_MEDIA_TUNER_TDA18212 is not set
 # CONFIG_MEDIA_TUNER_E4000 is not set
 # CONFIG_MEDIA_TUNER_FC2580 is not set
-# CONFIG_MEDIA_TUNER_M88TS2022 is not set
 # CONFIG_MEDIA_TUNER_TUA9001 is not set
 # CONFIG_MEDIA_TUNER_SI2157 is not set
 # CONFIG_MEDIA_TUNER_IT913X is not set
