--- a/projects/H3/linux/linux.arm.conf
+++ b/projects/H3/linux/linux.arm.conf
@@ -2053,10 +2053,10 @@ CONFIG_SND_SOC_DMAENGINE_PCM=y
 CONFIG_SND_SUNXI_SOC_AUDIOCODEC=y
 CONFIG_SND_SUNXI_SOC_PUBLUC_MACHINE=y
 CONFIG_SND_SUN8IW7_SNDCODEC=y
-CONFIG_SND_SUNXI_SOC_DAUDIO0_INTERFACE=m
-CONFIG_SND_SUNXI_SOC_DAUDIO0_PUBLIC_MACHINE=m
-CONFIG_SND_SUNXI_SOC_DAUDIO1_INTERFACE=m
-CONFIG_SND_SUNXI_SOC_DAUDIO1_PUBLIC_MACHINE=m
+CONFIG_SND_SUNXI_SOC_DAUDIO0_INTERFACE=y
+CONFIG_SND_SUNXI_SOC_DAUDIO0_PUBLIC_MACHINE=y
+# CONFIG_SND_SUNXI_SOC_DAUDIO1_INTERFACE is not set
+# CONFIG_SND_SUNXI_SOC_DAUDIO1_PUBLIC_MACHINE is not set
 CONFIG_SND_SUNXI_SOC_HDMIAUDIO=y
 CONFIG_SND_SUN8IW7_HDMIPCM=y
 CONFIG_SND_SUNXI_SOC_SPDIF=m
